# ARCHIVED-wfdb-plus

./: .clang-format  .gitignore  Dockerfile  Dockerfile.dev  README.md
src/: CMakeLists.txt  README.md
src/lib/: CMakeLists.txt  annot.c  annot.h  annot.hh  calib.c  calib.hh  netfiles.cc  netfiles.hh  signal.c  signal.h  signal.hh  wfdb.cc  wfdb.h  wfdb.hh  wfdbinit.cc  wfdbinit.h  wfdbio.cc  wfdbio.hh  wfdblib.h  wfdblib.hh
